# streamdeck-zoom-plugin

./: CMakeLists.txt  README.md
Release/: com.lostdomain.zoom.streamDeckPlugin
Sources/: CMakeLists.txt  ZoomStreamDeckPlugin.cpp  ZoomStreamDeckPlugin.h  main.cpp
StreamDeckSDK/: ESDLogger.h  ESDUtilitiesMac.cpp
sdPlugin/: manifest.json  manifest.json.cmake  streamdeck-zoom-share.psd
sdPlugin/propertyinspector/: index.html
